--- a/data-science.html
+++ b/data-science.html
@@ -71,6 +71,10 @@
   
       
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/foundersfactory/d891ee0a-bc0c-43ab-b29b-a5064d802068'>Founders Factory  - Data Scientist (BeRightBack)</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/grailbio/7c2b9cf6-d191-4ca8-b3c7-c2ee3a77a738'>GRAIL - Clinical Data Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
@@ -99,7 +103,7 @@
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://idalab.softgarden.io/job/3786012/Junior-Data-Scientist-Working-Student-m-f-d-?jobDbPVId=14434038&amp;l=en'>Junior Data Scientist (Working Student m/f/d)</a></h5> 
+<h5><a href='https://idalab.softgarden.io/job/3786012/Junior-Data-Scientist-Working-Student-m-f-d-?jobDbPVId=14434038&amp;l=en'>Junior Data Scientist (Working Student m/f/d)</a></h5> 
 <p><span class="badge badge-light">Berlin, Deutschland</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -115,11 +119,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.prostaff.ch/de/jobs/19145'>Senior JAVA Fullstack Developer | PROSTAFF ? Swiss IT and Data Science Recruitment &amp; HR-Services</a></h5> 
+<h5><a href='https://www.prostaff.ch/de/jobs/19145'>Senior JAVA Fullstack Developer | PROSTAFF ? Swiss IT and Data Science Recruitment &amp; HR-Services</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://sparkcognition.applytojob.com/apply/jIddMmezdD/Data-Scientist'>Data Scientist - SparkCognition - Career Page</a></h5> 
+<h5><a href='http://sparkcognition.applytojob.com/apply/jIddMmezdD/Data-Scientist'>Data Scientist - SparkCognition - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -147,7 +151,7 @@
 <p><span class="badge badge-light">Bogot?</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://youvisit.applytojob.com/apply/k8TfJ9J0Q7/Senior-Data-Scientist'>Senior Data Scientist - YouVisit LLC - Career Page</a></h5> 
+<h5><a href='http://youvisit.applytojob.com/apply/k8TfJ9J0Q7/Senior-Data-Scientist'>Senior Data Scientist - YouVisit LLC - Career Page</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -171,7 +175,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://solactive.join.com/jobs/461701-data-scientist-m-f-d'>Job @ Solactive  (Dresden): Data Scientist (m/f/d) | JOIN</a></h5> 
+<h5><a href='https://solactive.join.com/jobs/461701-data-scientist-m-f-d'>Job @ Solactive  (Dresden): Data Scientist (m/f/d) | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -189,12 +193,12 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/offerup/jobs/1924654?gh_src=674e85571'>Job Application for Staff Data Scientist, Manager at OfferUp</a></h5> 
+<h5><a href='https://boards.greenhouse.io/offerup/jobs/1924654?gh_src=674e85571'>Job Application for Staff Data Scientist, Manager at OfferUp</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 19, 2019 ... OfferUp is looking for a Staff Data Scientist Manager to join our team. We seek to 
 delight our users with the safest, simplest and most effective local marketplace?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1899265'>Job Application for Sr. Modeler (Data Science) at Sony Interactive ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1899265'>Job Application for Sr. Modeler (Data Science) at Sony Interactive ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Sr. Modeler (Data Science). San Mateo, CA. As a senior data scientist in the 
 Customer Lifecycle Management & Behavior Team you will be responsible for?...</p>
@@ -219,7 +223,7 @@ Customer Lifecycle Management & Behavior Team you will be responsible for?...</p
 <p><span class="badge badge-light">Canada  North America</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://rss.cm/job/1808/210/'>Data Scientist - Actuarials - Roles at Sumner &amp; Scott</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rss.cm/job/1808/210/'>Data Scientist - Actuarials - Roles at Sumner &amp; Scott</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -293,7 +297,7 @@ Customer Lifecycle Management & Behavior Team you will be responsible for?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oGI68fwm&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nQxfpMwi'>Guidewire Software, Inc. Careers - Data Scientist, Cyence - Chennai, India</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oGI68fwm&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nQxfpMwi'>Guidewire Software, Inc. Careers - Data Scientist, Cyence - Chennai, India</a></h5> 
 <p><span class="badge badge-light">Chennai, India  Chennai, India  Chennai, India</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -342,7 +346,7 @@ you innately curious, a natural born problem solver, a contrarian or a risk take
 <p>Oct 21, 2019 ... Create ML models for Advanced OCR and Cognitive Data Extraction capability 
 as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/thredup/61de3bc8-aa1f-4a6c-b221-d7c8bcd5167a'>thredUP - Data Scientist - Marketplace</a></h5> 
+<h5><a href='https://jobs.lever.co/thredup/61de3bc8-aa1f-4a6c-b221-d7c8bcd5167a'>thredUP - Data Scientist - Marketplace</a></h5> 
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -354,7 +358,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZE9Vfwr&k=Job&j=o8fsbfwK&__jvst=Employee&__jvsd=sAyZYgwQ&__jvsc=Twitter&bid=nr3voMwE'>Kaleidoscope Careers - Data Scientist</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZE9Vfwr&k=Job&j=o8fsbfwK&__jvst=Employee&__jvsd=sAyZYgwQ&__jvsc=Twitter&bid=nr3voMwE'>Kaleidoscope Careers - Data Scientist</a></h5> 
 <p><span class="badge badge-light">Cincinnati Cincinnati Cincinnati Cincinnati Cincinnati</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -386,7 +390,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">Chicago Chicago  Chicago</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oWbmafwn&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=ngbboMwh&jvi=oWbmafwn,Job&jvk=Job'>Medidata Solutions Careers - Senior Product Manager, Data Science</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oWbmafwn&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=ngbboMwh&jvi=oWbmafwn,Job&jvk=Job'>Medidata Solutions Careers - Senior Product Manager, Data Science</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -426,7 +430,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://thinkingmachin.es/careers/web-engineer/'>Web Engineer - Thinking Machines Data Science</a></h5> 
+<h5><a href='https://thinkingmachin.es/careers/web-engineer/'>Web Engineer - Thinking Machines Data Science</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -476,10 +480,6 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/SoftwareTechnologyInc2/743999698405739-hiring-data-scientist-mettawa-il-fulltime'>Software Technology Inc Hiring---Data Scientist--Mettawa, IL--Fulltime | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AveryDennison/743999698404481-data-scientist'>Avery Dennison Data Scientist | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 
