--- a/data-engineer.html
+++ b/data-engineer.html
@@ -105,11 +105,11 @@
 <p><span class="badge badge-light">Bethesda, MD</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/tj3jjyqpyactjaprxu9cbyg6gh'>Data Engineer up to $300,000 | CardinalHire</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/tj3jjyqpyactjaprxu9cbyg6gh'>Data Engineer up to $300,000 | CardinalHire</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://profacebook.applytojob.com/apply/BSiQD7ymkA/Data-Engineer'>Data Engineer - PRO Unlimited @ Facebook - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://profacebook.applytojob.com/apply/BSiQD7ymkA/Data-Engineer'>Data Engineer - PRO Unlimited @ Facebook - Career Page</a></h5> 
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -153,7 +153,7 @@
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/tandemmoneylimited/jobs/4492957002'>Job Application for Head of Data Engineering at Tandem Bank</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tandemmoneylimited/jobs/4492957002'>Job Application for Head of Data Engineering at Tandem Bank</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom  London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -165,11 +165,11 @@
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://durstexpress.join.com/jobs/463867-senior-data-engineer'>Job @ Durstexpress (Berlin): (Senior) Data Engineer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://durstexpress.join.com/jobs/463867-senior-data-engineer'>Job @ Durstexpress (Berlin): (Senior) Data Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lbl.referrals.selectminds.com/jobs/workflow-systems-and-bioinformatics-data-engineer-2291'>Workflow Systems and Bioinformatics Data Engineer - LBL Careers</a></h5> 
+<h5><a href='https://lbl.referrals.selectminds.com/jobs/workflow-systems-and-bioinformatics-data-engineer-2291'>Workflow Systems and Bioinformatics Data Engineer - LBL Careers</a></h5> 
 <p><span class="badge badge-light">United States  Berkeley Berkeley</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -209,7 +209,7 @@ systems,?...</p>
 <p><span class="badge badge-light">Austin, Texas  Chicago, Illinois  Austin Chicago</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698479500-data-engineer'>SmartRecruiters Inc Data Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698479500-data-engineer'>SmartRecruiters Inc Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -249,7 +249,7 @@ systems,?...</p>
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/1904labs/jobs/modern-data-engineer-cYDOAY-Ser6yzHaKiznY58'>Modern Data Engineer #0160 job at 1904labs in Saint Louis, MO, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/1904labs/jobs/modern-data-engineer-cYDOAY-Ser6yzHaKiznY58'>Modern Data Engineer #0160 job at 1904labs in Saint Louis, MO, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -281,7 +281,7 @@ systems,?...</p>
 <p><span class="badge badge-light">Tennessee</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=o0Spbfwc&__jvst=Employee+Referral&__jvsd=sdujEgwp&__jvsc=Twitter&bid=nkN8nMwT'>Palo Alto Networks Careers - Senior Big Data Engineer (Cortex XDR)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=o0Spbfwc&__jvst=Employee+Referral&__jvsd=sdujEgwp&__jvsc=Twitter&bid=nkN8nMwT'>Palo Alto Networks Careers - Senior Big Data Engineer (Cortex XDR)</a></h5> 
 <p><span class="badge badge-light">Palo Alto Palo Alto Tel Aviv, Israel  Palo Alto</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -362,7 +362,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Cairo, Egypt</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/coupang/jobs/1933618'>Job Application for Data Engineer at Coupang</a></h5> 
+<h5><a href='https://boards.greenhouse.io/coupang/jobs/1933618'>Job Application for Data Engineer at Coupang</a></h5> 
 <p><span class="badge badge-light">Seattle, WA  Seattle</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -398,7 +398,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Australia</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://cover.applytojob.com/apply/kRZKlSeVjD/Lead-Data-Engineer'>Lead Data Engineer - Cover - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://cover.applytojob.com/apply/kRZKlSeVjD/Lead-Data-Engineer'>Lead Data Engineer - Cover - Career Page</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -444,7 +444,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Cairo, Egypt</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://levelset.applytojob.com/apply/tXu5qHO0PW/Software-Data-Engineer'>Software Data Engineer - Levelset - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://levelset.applytojob.com/apply/tXu5qHO0PW/Software-Data-Engineer'>Software Data Engineer - Levelset - Career Page</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -484,7 +484,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Cluj-Napoca, Romania</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
